# fsrsrs

./: Cargo.toml  LICENSE  README.md
src/: alea.rs  algo.rs  card.rs  cards.rs  fsrs.rs  fuzz_range.rs  grade.rs  lib.rs  models.rs  parameters.rs  parameters_builder.rs  scheduler.rs  scheduler_basic.rs  scheduler_longterm.rs  testing.rs  tests.rs
src/models/: card.rs  mod.rs  rating.rs  review_log.rs  scheduling_info.rs  state.rs
src/prng/: alea.rs  mash.rs  mod.rs
src/scheduler/: base.rs  basic.rs  long_term.rs  longterm.rs  mod.rs  short_term.rs
