[package]
name = "fsrsrs"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Rust-based FSRS scheduler"

[dependencies.chrono]
version = "0.4.23"

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
optional = true

[features]
serde = ["dep:serde", "chrono/serde"]
